--- a/less/plugins/ecommerce/ecommerce-basket.less
+++ b/less/plugins/ecommerce/ecommerce-basket.less
@@ -3,7 +3,8 @@
 // Basket Icon
 
 .widget[data-widget-type="ecombasket"] {
-    margin: 0 auto;
+	margin-left: auto;
+	margin-right: auto;
 	padding: 1em 0;
     max-width: @layout-max-width;
     width: 90%;
@@ -81,7 +82,8 @@
 .show-content {
 	.ecombasket {
 		.basket-body {
-			margin: 0 auto;
+			margin-left: auto;
+			margin-right: auto;
 			padding: 1em 0;
 			max-width: @layout-max-width;
 		
