--- a/less/widgets/embeds.less
+++ b/less/widgets/embeds.less
@@ -14,7 +14,7 @@
 	}
 	
 	&__embed-wrap {
-		background-color: @color__navigation--border;
+		background-color: transparent;
 	}
 }
 
@@ -30,7 +30,7 @@
 	}
 	
 	&__embed-wrap {
-		background-color: @color__navigation--border;
+		background-color: transparent;
 	}
 }
 
@@ -46,7 +46,8 @@ iframe[src*="vimeo"] {
 
 div.embed-content p {
 	max-width: @layout-max-width;
-	margin: 0 auto;
+	margin-left: auto;
+	margin-right: auto;
 	margin-bottom: 2em;
 }
 
