--- a/less/widgets/navigation.less
+++ b/less/widgets/navigation.less
@@ -505,8 +505,8 @@ a.companyname {
 		content: " ";
 		position: absolute;
 		bottom: 0;
-		left: 0.5em;
-		right: 0.5em;
+		left: 0;
+		right: 0;
 		border-bottom: 1px solid fade(@color__navigation--border, 25%);
 	}
 
