--- a/less/main/variables.less
+++ b/less/main/variables.less
@@ -6,17 +6,13 @@
 @desktop: ~"only screen and (max-width: 1650px)";
 @desktop-narrow: ~"only screen and (max-width: 1200px)";
 @tablet-horizontal: ~"only screen and (max-width: 1024px)";
-@tablet: ~"only screen and (max-width: 768px)";
-@mobile: ~"only screen and (max-width: 650px)";
-@mobile-small: ~"only screen and (max-width: 380px)";
 @columns-tablet: ~"only screen and (max-width: 925px)";
 @columns-mobile: ~"only screen and (max-width: 650px)";
 
 // Layout
 
 @layout-max-width: 1600px;
-@layout-width-desktop: 1200px;
-@layout-width-tablet: 90%;
+@layout-max-width-text: 940px;
 
 // Global Widget Spacing
 
