--- a/less/plugins/ecommerce/ecommerce-basket-summary.less
+++ b/less/plugins/ecommerce/ecommerce-basket-summary.less
@@ -8,6 +8,18 @@
     margin: 2em 0;
 	border: none;
 	border-top: 1px solid @color__p--text;
+
+    .style--dark & {
+		border-color: @color__p--text;
+    }
+
+	.style--light & {
+        border-color: @color--dark;
+    }
+
+    .style--accent & {
+        border-color: @contrast--accent;
+    }
 	
     // Table and Cells Reset
 
@@ -77,6 +89,21 @@
 			.cell {
 				border-bottom: 1px solid @color__p--text;
 				color: @color__p--text;
+
+				.style--dark & {
+					border-color: @color__p--text;
+					color: @color__p--text;
+				}
+			
+				.style--light & {
+					border-color: @color--dark;
+					color: @color--dark;
+				}
+			
+				.style--accent & {
+					border-color: @contrast--accent;
+					color: @contrast--accent;
+				}
 			}
 		}
 	}
@@ -96,6 +123,18 @@
 				font-size: 1em !important;
 				color: @color-text--faded;
 				margin: 0;
+
+				.style--dark & {
+					color: @color-text--faded;
+				}
+			
+				.style--light & {
+					color: fade(@color--dark, 75%);
+				}
+			
+				.style--accent & {
+					color: fade(@contrast--accent, 75%);
+				}
 			}
 		}
 	}
@@ -156,6 +195,18 @@
 
 		.summary-item-link {
 			color: @color__p--text;
+
+			.style--dark & {
+				color: @color__p--text;
+			}
+		
+			.style--light & {
+				color: @color--dark;
+			}
+		
+			.style--accent & {
+				color: @contrast--accent;
+			}
 		}
 	}
 }
@@ -185,15 +236,9 @@
 			min-width: 100px;
 
 			@media @mobile {
-				margin: 0 auto;
+				margin-left: auto;
+				margin-right: auto;
 				float: left;
-			}
-
-			@media @mobile-small {
-				height: 25px;
-				line-height: 25px;
-    			max-width: 75px;
-				min-width: 75px;
 			}
 
 			.button--quantity {
@@ -206,16 +251,22 @@
 				@media @mobile {
 					line-height: 20px;
 				}
-
-				@media @mobile-small {
-					width: 25px;
-					height: 25px;
-					min-height: 25px;
-				}
 			}
 
 			.quantity-field {
 				color: @color__p--text;
+
+				.style--dark & {
+					color: @color__p--text;
+				}
+			
+				.style--light & {
+					color: @color--dark;
+				}
+			
+				.style--accent & {
+					color: @contrast--accent;
+				}
 			}
 		}
 	}
@@ -237,11 +288,6 @@
 				float: left;
 				width: 30%;
 			}
-
-			@media @mobile-small {
-				margin-left: 0;
-				width: 110px;
-			}
 		}
 	}
 }
@@ -259,10 +305,6 @@
 				padding: 0.5em;
 				width: auto;
 			}
-
-			@media @mobile-small {
-				margin-left: 110px;
-			}
 		}
 	}
 }
@@ -277,6 +319,18 @@
     .cell--order-total {
         text-align: right;
 		border-top: 1px solid @color__ecomproductslist--background;
+
+		.style--dark & {
+			border-color: @color__ecomproductslist--background;
+		}
+	
+		.style--light & {
+			border-color: @color--light;
+		}
+	
+		.style--accent & {
+			border-color: @color--accent;
+		}
 	}
 	
 	.order-total {
